# oneline-template

./: Cargo.toml  README.md
src/: function_executor.rs  functions.rs  lib.rs  template.rs
src/function_executor/: function_argument.rs  function_argument_type.rs  function_error.rs  function_executor.rs  function_schema.rs  value.rs
src/functions/: bool.rs  debug.rs  float.rs  int.rs  string.rs  uint.rs
src/functions/bool/: to_string.rs  unwrap_or.rs
src/functions/debug/: debug_type.rs
src/functions/float/: to_string.rs
src/functions/int/: abs.rs  hex.rs  hex_fmt.rs  to_string.rs
src/functions/string/: substr.rs  trim.rs  trim_end.rs  trim_start.rs  unwrap_or.rs
src/functions/uint/: hex.rs  hex_fmt.rs  to_string.rs
src/template/: argument_types_differ_error.rs  build_error.rs  syntax.rs  template.rs  template_build_error.rs  template_builder.rs  template_error.rs
src/template/syntax/: expected_token_error.rs  field.rs  field_name.rs  field_path.rs  field_read_token.rs  function_call_argument_token.rs  function_call_token.rs  function_name.rs  invalid_argument_template.rs  syntax.rs  syntax_parse_error.rs  template_token.rs  token.rs  unexpected_input_error.rs
src/template/template/: convert_document.rs  convert_function_argument.rs  convert_value_to_string.rs  template_error.rs
tests/: test_functions.rs  test_parser.rs
