[package]
name = "oneline-template"
version = "0.1.0"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>"]
edition = "2018"
description = "Library for serialization structures in one-line string. Helpful for path formatting."
license = ["MIT OR Apache-2.0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "1.0"
unstructured = {version = "0.5", features = []}

[dev-dependencies]
serde_derive = "1.0"